# popeye-test

./: Cargo.toml  LICENSE-MIT  README.md  index-1a77c37283700f83.css  index-4063ee610a214f2b.css  index-a76a8429b207255a.css  index.html  index.scss  popeye-3cf741e7bf377d05.js  popeye-3cf741e7bf377d05_bg.wasm  site.webmanifest
.github/workflows/: deploy.yml
src/: app.rs  main.rs  select.rs  set.rs
src/data/: exercises.json  mod.rs  muscles.json
