[package]
name = "popeye"
version = "0.1.0"
edition = "2021"
description = "Web app for optimizing training programs"
readme = "README.md"
repository = "https://github.com/s1gtrap/popeye"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
petgraph = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
wasm-log = "0.3.1"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement"] }
yew = { version="0.20", features=["csr"] }
